--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/ecommerce.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ecommerce + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/ecommerce.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content=" Welcome to this ecommerce, your one-stop shop for kids clothing. We offer a wide variety of high-quality
+    products at competitive prices, all backed by our exceptional customer service. Our team is dedicated to providing
+    you with a positive shopping experience, from browsing our easy-to-navigate website to receiving your order promptly
+    and safely. Whether you are looking for [specific product examples], we have something for everyone. Visit us today
+    and discover the ecommerce difference!" />
+  <title>Ecommerce + React + TS</title>
+</head>
+
+<body>
+  <div id=" root">
+  </div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
