--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
     you with a positive shopping experience, from browsing our easy-to-navigate website to receiving your order promptly
     and safely. Whether you are looking for [specific product examples], we have something for everyone. Visit us today
     and discover the ecommerce difference!" />
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="komorebi-frontend-production.vercel.app">
+  <meta property="twitter:url" content="https://komorebi-frontend-production.vercel.app/">
+  <meta name="twitter:title" content="komorebi">
+  <meta name="twitter:description" content="Welcome to this ecommerce, your one-stop shop for kids clothing. We offer a wide variety of high-quality
+    products at competitive prices, all backed by our exceptional customer service. Our team is dedicated to providing
+    you with a positive shopping experience, from browsing our easy-to-navigate website to receiving your order promptly
+    and safely. Whether you are looking for [specific product examples], we have something for everyone. Visit us today
+    and discover the ecommerce difference!">
+  <meta name="twitter:image"
+    content="https://res.cloudinary.com/dbspz5tmg/image/upload/v1679743571/youtube/2023/march/komorebi-development/young-person-wearing-hoodie-mockup_2_mf5tty.png" />
   <title>Ecommerce + React + TS</title>
+
 </head>
 
 <body>
